<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/editProfileTitlebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/navbar"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/sinupTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/twoBtnsLayout"
        android:layout_below="@+id/editProfileTitlebar"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/takePhoto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/profile_noimage_placeholder" />

            <EditText
                android:id="@+id/locationBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/profileImg"
                android:background="@drawable/login_txt_field"
                android:hint="@string/location"
                android:paddingLeft="5dp"
                android:singleLine="true" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/locationBox"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/profileImg"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/maleBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male_text"
                    android:textColor="@color/darkgray" />

                <RadioButton
                    android:id="@+id/femaleBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female_text"
                    android:textColor="@color/darkgray" />
            </RadioGroup>
        </RelativeLayout>

        <EditText
            android:id="@+id/firstNameBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/login_txt_field"
            android:hint="@string/first_name"
            android:paddingLeft="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/lastNameBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/login_txt_field"
            android:hint="@string/last_name"
            android:paddingLeft="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/designationBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/login_txt_field"
            android:hint="@string/designation_text"
            android:paddingLeft="5dp"
            android:singleLine="true" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/twoBtnsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/doneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/addplacebtn"
            android:text="@string/done_text"
            android:textColor="@color/white" >
        </Button>

        <Button
            android:id="@+id/clearBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/addplacebtn"
            android:text="@string/cancel_text"
            android:textColor="@color/white" >
        </Button>
    </RelativeLayout>

</RelativeLayout>