<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/titlebar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/navbar"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/logo" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titlebar"
            android:layout_marginBottom="20dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/faceBookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/facebookbtn"
                android:gravity="center"
                android:text="@string/connnectwithfb_text"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/or_text"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailLoginBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_txt_field"
                android:hint="@string/email_text"
                android:paddingLeft="5dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/loginPasswordBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_txt_field"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/facebookbtn"
                android:gravity="center"
                android:text="@string/login_text"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signupOfferButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/darkgray"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/notaMember"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/not_a_member_text"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/signUpView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/signup_title_text"
                    android:textColor="@color/red"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/notaMember"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/signUpView"
                    android:gravity="center"
                    android:text="@string/winpoins_text"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
