<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/signupTitlebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/navbar"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/sinupTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/signup_title_text"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/cancelbtn"
            android:gravity="center"
            android:text="@string/cancel_text"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/jointitlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupTitlebar"
       
        android:background="@drawable/place_offer_bar"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/cupImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@drawable/points_img" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/cupImage"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/winpoins_text"
                android:textColor="@color/darkBlue"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/join_text"
                android:textColor="@color/darkgray"
                android:textSize="10sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" 
        >

        <EditText
            android:id="@+id/emailBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_txt_field"
            android:hint="@string/email_text"
            android:paddingLeft="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/nameBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_txt_field"
            android:hint="@string/name_text"
            android:paddingLeft="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/passwordBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_txt_field"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/sinup"
        android:gravity="center"
        android:text="@string/signup_title_text"
        android:textColor="@color/white" />

</RelativeLayout>