<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/placeTitlebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/navbar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/homebutton"
            android:gravity="center" >
        </Button>

        <TextView
            android:id="@+id/sinupTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/homeButton"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="@string/addplace_text"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/profilebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/avatarbutton"
            android:gravity="center" >
        </Button>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/createNewProfTitlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/placeTitlebar"
      
        android:background="@drawable/place_offer_bar"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/cupImage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@drawable/points_img" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/cupImage1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/winpoins_text"
                android:textColor="@color/darkBlue"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/create_new_place_text"
                android:textColor="@color/darkgray"
                android:textSize="10sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/takePhoto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createNewProfTitlebar"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/takePhotoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/add_photo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/takePhotoBtn"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/placenameBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/login_txt_field"
                android:hint="@string/place_name_text"
                android:paddingLeft="5dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/categryBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/categorybtn"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/category_text"
                android:textColor="@color/darkgray" >
            </Button>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/desripLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnsLayout"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/takePhoto"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/addAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/login_txt_field"
            android:hint="@string/add_address_text"
            android:paddingLeft="5dp"
            android:singleLine="true" >
        </EditText>

        <EditText
            android:id="@+id/addDescrip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:background="@drawable/login_txt_field"
            android:gravity="top"
            android:hint="@string/add_desc_text"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:singleLine="true" >
        </EditText>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/btnsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/doneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/addplacebtn"
            android:paddingLeft="5dp"
            android:text="@string/done_text"
            android:textColor="@color/white" >
        </Button>

        <Button
            android:id="@+id/clearBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/doneBtn"
            android:background="@drawable/addplacebtn"
            android:paddingLeft="5dp"
            android:text="@string/cancel_text"
            android:textColor="@color/white" >
        </Button>
    </RelativeLayout>

</RelativeLayout>